--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li><a>Vietnam</a></li>
           <li><a>China</a></li>
           <li><a>The US</a></li>
+          <li><a>Korea</a></li>
         </ul>
       </div>
     </div>
