--- a/index.html
+++ b/index.html
@@ -5,27 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+
     <title>Document</title>
   </head>
   <body>
-    <div class="dropdown">
-      <button class="dropdown_button">Dropdown menu</button>
-      <div class="dropdown_menu">
-        <ul class="menu">
-          <li><a>Canada</a></li>
-          <li><a>Vietnam</a></li>
-          <li><a>China</a></li>
-          <li><a>The US</a></li>
-        </ul>
-      </div>
-    </div>
-    <h2>Hello World</h2>
-    <p class="para">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-      perferendis, consectetur possimus, praesentium laboriosam placeat autem
-      officia magni mollitia laborum doloribus labore et impedit fuga molestiae
-      eos, asperiores temporibus exercitationem!
-    </p>
+    <table>
+      <tr>
+        <th>Item</th>
+        <th>Quanlity</th>
+        <th>Price</th>
+      </tr>
+      <tr>
+        <td>blue pen</td>
+        <td>6</td>
+        <td>$2</td>
+      </tr>
+      <tr>
+        <td>red pen</td>
+        <td>5</td>
+        <td>$2</td>
+      </tr>
+      <tr>
+        <td>black pen</td>
+        <td>6</td>
+        <td>$5</td>
+      </tr>
+    </table>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="script.js"></script>
 </html>
