--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <td>$5</td>
       </tr>
     </table>
+    <p>Hello World</p>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="script.js"></script>
